# equinox

./: .gitignore  Makefile  README.md
Haskell/: Clausify.hs  Flags.hs  Form.hs  Main.hs  Makefile  Name.hs  Output.hs  ParseProblem.hs  Parsek.hs  Runner.hs  Sat.hs  Str.hs  equinox.cabal
Haskell/Equinox/: ConSat.hs  FolSat.hs  Main.hs  PSequence.hs  TermSat.hs  TopSort.hs
Haskell/Infinox/: Auto.hs  Classify.hs  Conjecture.hs  Generate.hs  InjOnto.hs  Leo.hs  Relations.hs  Timeout.hs  Util.hs  Zoom.hs
Haskell/Paradox/: AnalysisTypes.hs  Flatten.hs  Instantiate.hs  Main.hs  SolveInstances.hs
