name:                   equinox
version:                5.0
author:                 Koen Claessen
maintainer:             nicksma@chalmers.se
synopsis:               Equinox
category:               Proving
stability:              Experimental
cabal-version:          >= 1.6
build-type:             Simple
homepage:               github.com/nick8325/equinox.git
tested-with:            GHC == 7.2.2

executable              equinox
    ghc-options:        -threaded -O2 -static -optl
                        ../minisat/current-base/Solver.or
                        ../minisat/current-base/Prop.or
                        ../instantiate/MiniSatWrapper.or
                        ../instantiate/MiniSatInstantiateClause.or
    include-dirs:       ../instantiate ../minisat/current-base
    extra-libraries:    stdc++
    main-is:            Equinox/Main.hs

    build-depends:
                  base       >= 4 && < 5
                , containers >= 0.3
                , mtl        >= 2.0
                , QuickCheck >= 2.0
                , random     >= 1.0

